# externalbrowser

./: .env.example  .gitignore  Dockerfile  README.md  docker-build.sh  docker-entrypoint.sh  docker-run.sh  pyproject.toml
.devcontainer/: devcontainer.json
externalbrowser/: main.py
snowflake-connector-python/src/snowflake/connector/auth/: webbrowser.py
